--- a/Verslagen/1e verslag/template.tex
+++ b/Verslagen/1e verslag/template.tex
@@ -3,6 +3,7 @@
 % E.g., \documentclass[english,peerreview]{sareport}
 
 \usepackage[colorlinks, linkcolor=black, citecolor=black, urlcolor=black]{hyperref}
+\usepackage{float}
 
 
 % Set all authors, if your group counts 2, set third author empty \authorthree{}
@@ -28,10 +29,9 @@
 \section{Domain models}
 This section shows the domain model(s).
 
-\begin{figure}[!htp]
+\begin{figure}[H]
     \centering
-    %\includegraphics[width=0.8\textwidth]{}
-    \missingfigure[figwidth=0.8\textwidth]{Domain model}
+    \includegraphics[width=\textwidth, height=11cm, angle=90]{Domain_model.pdf}
     \caption{The domain model for the system.}\label{fig:domain_model}
 \end{figure}
 
@@ -156,34 +156,34 @@ The system logs him of.
 The organization wishing to becom a an Application Provider contacts SIoTIP and they negotiate the contract. The organization reveices API documentation and rules of conduct from SIoTIP. When the negotiations are conducted, the organization is provided dashboard accounts for the individual developers employed by the organization and the organization is registered as an Application Provider in the Online service.
 
 \paragraph{UC4: Add application}
-The user is logged into the Application Provider dashboard and uploads the new application. The Online Service initiates a number of automated tests and shows the progress on the user's Application Provider dashboard. If the application passes all tests, the user receives a notification and the application is made available to Customer Organizations for subscription. If the application does not pass al tests, a SIoTIP System Administrator performs a secondary review and decides whether to accept or reject the application. In the latter case, the user is notified of the reason of rejection.
+The user logs into the Application Provider dashboard and uploads the new application. The Online Service initiates a number of automated tests and shows the progress on the user's Application Provider dashboard. If the application passes all tests, the user receives a notification and the application is made available to Customer Organizations for subscription. If the application does not pass al tests, a SIoTIP System Administrator performs a secondary review and decides whether to accept or reject the application. In the latter case, the user is notified of the reason of rejection.
 
 \paragraph{UC5: Update existing application}
-The user is logged into the Application Provider dashboard and uploads the updated application. The user also indicates whether to automatically update existing instances of the application or to require customer organizations to subscribe to the application. SIoTIP initiates a number of automated tests and shows the progress on the user's application provider dashboard. If the application passes all tests, the user receives a notification and the application is made available to customer organizations for subscription. If the application does not pass all tests, a SIoTIP system administrator performs a secondary review and decides whether to accept or reject the application. In the latter case, the user is notified of the reason of rejection.
+The user logs into the Application Provider dashboard and uploads the updated application. The user also indicates whether to automatically update existing instances of the application or to require customer organizations to subscribe to the application. SIoTIP initiates a number of automated tests and shows the progress on the user's application provider dashboard. If the application passes all tests, the user receives a notification and the application is made available to customer organizations for subscription. If the application does not pass all tests, a SIoTIP system administrator performs a secondary review and decides whether to accept or reject the application. In the latter case, the user is notified of the reason of rejection.
 
 \paragraph{UC6: Register as new infrastructure owner}
-The Infrastructure Owner contacts SIoTIP and negotiations are started. An Infrastructure Owner dashboard account is set up for the new user. The infrastructure owner provides the names of the currently renting companies, and SIoTIP contacts them for registration (See UC: Register new customer organization).
+The infrastructure owner contacts SIoTIP and negotiations are started. An Infrastructure Owner dashboard account is set up for the new user. The infrastructure owner provides the names of the currently renting companies, and SIoTIP contacts them for registration (See UC: Register new customer organization).
 
 \paragraph{UC7: Register as new customer organization}
 The organization contacts or is contacted by SIoTIP and provides it's billing and contact information. The organization is then registered as a Customer Organization in the Online Service.
 
 \paragraph{UC8: Subscribe to application}
-The user is logged into his Customer Organization dashboard, subscribes to the application and provides the needed information. The user is informed by the Online Service that the application will be activated once the required peripherals are installed. SIoTIP checks whether or not the customer organization has access to all the peripherals needed for the application. If not, the infrastructure owner is automatically notified of the subscription and the needed peripherals (see UC10: process peripheral request). Once all required hardware is installed, the application is activated and the user is notified.
+The user logs into his Customer Organization dashboard, subscribes to the application and provides the needed information. The user is informed by the Online Service that the application will be activated once the required peripherals are installed. SIoTIP checks whether or not the customer organization has access to all the peripherals needed for the application. If not, the infrastructure owner is automatically notified of the subscription and the needed peripherals (see UC10: process peripheral request). Once all required hardware is installed, the application is activated and the user is notified.
 
 \paragraph{UC9: Unsubscribe from application}
-The user is logged into his Customer organization dashboard and unsubscribes from the application. TODO notification nodig? The user is informed by the Online Service that the application will be deactivated.
+The user logs into his Customer organization dashboard and unsubscribes from the application. TODO notification nodig? The user is informed by the Online Service that the application will be deactivated.
 
 \paragraph{UC10: Process peripheral request}
 The Infrastructure Owner is notified of a new request for peripherals. SIoTIP automatically adds sufficient gateways needed to support these peripherals to the request, if any. The infrastructure owner approves or rejects the purchase of the hardware and a notification of the decision is sent to the user which requested the peripherals. If the infrastructure owner approved the request, the hardware is ordered from SIoTIP.
 
 \paragraph{UC11: Install new hardware}
-The Infrastructure Owner receives the hardware from SIoTIP and installs it. The infrastructure owner configures any new gateways to connect to the (WiFi?) local network. Once online, the gateways immediately connect to the Online Service to register themselves. The infrastructure owner then logs in to the infrastructure owner dashboard and provides the necessary topology information. Lastly, he allocatesthe new peripherals to the Customer Organizations in his building (See UC17: Allocate peripherals).
+The Infrastructure Owner receives the hardware from SIoTIP and installs it. The infrastructure owner configures any new gateways to connect to the (WiFi?) local network. Once online, the gateways immediately connect to the Online Service to register themselves. The infrastructure owner then logs in to the infrastructure owner dashboard and provides the necessary topology information. Lastly, he allocatesthe new peripherals to the Customer Organizations in his building (See UC: Allocato peripherals).
 
 \paragraph{UC12: Resolve hardware failure}
 The Online Service detects that a hardware component is no longer sending data and sends a notification to the Infrastructure Owner. The Online Service also notifies all applications currently using the failing hardware component so that the applications can search for equivalent sensors in the topology. 
 
 \paragraph{UC13: Configure end-users}
-The user is logged into the Customer Organization dashboard and assigns users to an application. These changes are saved in the Online Service.
+The user logs in to the Customer Organization dashboard and assigns users to an application. These changes are saved in the Online Service.
 Nodig?
 
 \paragraph{UC14: Transmit data}
@@ -191,13 +191,13 @@ TODO nodig als use case?
 The sensor sends data to the corresponding gateway. The gateway stores the data and makes it available to all applications running on that gateway.
 
 \paragraph{UC15: Get invoice overview}
-The user is logged into his Customer Organization dashboard and selects the option to show his Customer Organization's invoice overview. The Online Service then shows an overview of all the Customer Organization's invoices.
+The user logs into his Customer Organization dashboard and selects the option to show his Customer Organization's invoice overview. The Online Service then shows an overview of all the Customer Organization's invoices.
 
 \paragraph{UC16: Edit topology}
-The user is logged into his Infrastructure Owner dashboard and selects the option to edit the his building's (TODO meerdere buildings?) topology. When the user is done editing the topology, the updated topology will be saved in the Online Service.
+The user logs into his Infrastructure Owner dashboard and selects the option to edit the his building's (TODO meerdere buildings?) topology. When the user is done editing the topology, the updated topology will be saved in the Online Service.
 
 \paragraph{UC17: Allocate peripherals}
-The user is logged into his Infrastructure Owner dashboard and selects the option to allocate peripherals to Customer Organizations. He then assigns access rights to the Customer Organizations in his building to use the new peripherals. The Online Service automatically activates any application of that Customer Organizaion which needed the newly allocated peripherals in order to run. Conversely, if a peripheral gets withheld from a Customer Organization, the Onlice Service deactivates any application of that Customer Organization which needed the withholded peripheral to function properly.
+The user logs into his Infrastructure Owner dashboard and selects the option to allocate peripherals to Customer Organizations. He then assigns access rights to the Customer Organizations in his building to use the new peripherals. The Online Service automatically activates any application of that Customer Organizaion which needed the newly allocated peripherals in order to run. Conversely, if a peripheral gets withheld from a Customer Organization, the Onlice Service deactivates any application of that Customer Organization which needed the withholded peripheral to function properly.
 
 \paragraph{UC18: Develop application}
 TODO nodig? Niet echt interactie tussen context en systeem?
@@ -209,16 +209,16 @@ An event causes the platform to misbehave. The Online Service detects this event
 An event causes an application to misbehave. The Online Service detects this event and sends a notification to the System Administrator(s). TODO ook notifiation naar app provider?
 
 \paragraph{UC21: Configure method of notification delivery}
-The user is logged into his Customer Organization dashboard and configures the method of notification delivery. The Online Service will save the changes made.
+The user logs into his Customer Organization dashboard and configures the method of notification delivery. The Online Service will save the changes made.
 
 \paragraph{UC22: Request notification overview}
-The user is logged into his dashboard and requests an overview of previously received notifications and alarms. The Online Service provides this overview.
+The user logs into his dashboard and requests an overview of previously received notifications and alarms. The Online Service provides this overview.
 
 \paragraph{UC23: Synchronize Online Service and gateway}
 The gateway sends all data acquired between this moment and the last synchronization moment to the Online Service.
 
 \paragraph{UC24: Get application overview}
-The user is logged into his Application Provider dashboard and request an overview their of applications. The Online Service provides this overview.
+The user logs into his Application Provider dashboard and request an overview their applications. The Online Service provides this overview.
 
 
 
@@ -226,46 +226,39 @@ The user is logged into his Application Provider dashboard and request an overvi
 \subsection{\emph{UC8}: Subscribe to application}
 \begin{itemize}
     \item \textbf{Name:} Subscribe to application
-    \item \textbf{Primary actor:} member of a Customer Organization
+    \item \textbf{Primary actor:} Customer Organization
     \item \textbf{Secondary actor(s)}: 
 	\begin{itemize}
 		\item Infrastructure Owner: Needs to approve/reject the subscription if extra hardware is needed
 	\end{itemize}
     \item \textbf{Interested parties:} 
         \begin{itemize}
-            \item \textit{Online Service:} wants to authenticate its users and keep tack of subscriptions.
+            \item \textit{System:} wants to authenticate its users.
         \end{itemize}
 
     \item \textbf{Preconditions:}
         \begin{itemize}
-            \item The Customer Organization is registered on the Online Service (UC7).
-            \item The member of the Customer Organization is logged into the Online Service (UC1).
+            \item The User is registered into the system and has credentials to prove his identity.
+            \item Second precondition.
         \end{itemize}
 
     \item \textbf{Postconditions:}
         \begin{itemize}
-            \item The Customer Organization is subscribed to the application.
+            \item First postcondition.
             \item Second postcondition.
         \end{itemize}
         
     \item \textbf{Main scenario:} 
     \begin{enumerate}
-       \item The member of the Customer Organization indicates he wants to subscribe to an application.
-       \item The Online Service presents the user with a means to search for and subscribe to applications.
-       \item The user subscribes to an application.
-	\item The Online Service saves the subscription.
-	\item The Online Service notifies the user that the application will be activated once the required peripherals are installed.
-	\item The Online Service notifies the Infrastructure Owner that hardware is needed (\textbf{include:} UC10: Process peripheral request).
-	\item The Infrastructure Owner installs the hardware (\textbf{include:} UC11: Install new hardware).
-	\item The Online Service activates the application
-	\item The Online Service notifies the user that the application is activated.
+       \item Step 1
+       \item Step 2
+       \item Step 3
        \item \ldots
     \end{enumerate}
 
     \item \textbf{Alternative scenarios:} 
     \begin{enumerate}
-	\item [5b.] All hardware needed is already available to the Customer Organization, resume at step 9.
-        \item [7b.] The Infrastructure owner rejected the request, the user is notified of the rejection.
+        \item [3b.] Alternative at step 3
     \end{enumerate}
     
     \item \textbf{Remarks:}
@@ -274,46 +267,42 @@ The user is logged into his Application Provider dashboard and request an overvi
         \end{itemize}
 \end{itemize}
 
-\subsection{\emph{UC4}: Add application}
+\paragraph{UC1: Name}
+Short summary of this use case scenario
+
+\subsection{\emph{UC1}: Log in}
 \begin{itemize}
-    \item \textbf{Name:} Add application
-    \item \textbf{Primary actor:} Application Provider
-    \item \textbf{Secondary actor(s)}: System Administrator
+    \item \textbf{Name:} log in
+    \item \textbf{Primary actor:} the User
+    \item \textbf{Secondary actor(s)}: secondary actor(s)
     \item \textbf{Interested parties:} 
         \begin{itemize}
-            \item \textit{Online Service:} wants to authenticate its users and keep track of applications.
+            \item \textit{System:} wants to authenticate its users.
         \end{itemize}
 
     \item \textbf{Preconditions:}
         \begin{itemize}
-            \item The Application Provider is registered on the Online Service (UC3).
-            \item The Application Provider is logged into the Online Service (UC1).
+            \item First precondition.
+            \item Second precondition.
         \end{itemize}
 
     \item \textbf{Postconditions:}
         \begin{itemize}
-            \item The Application Provider is notified about whether or not the application got accepted by the Online Service
+            \item First postcondition.
+            \item Second postcondition.
         \end{itemize}
         
     \item \textbf{Main scenario:} 
     \begin{enumerate}
-       \item The Application Provider indicates he wants to add an application
-       \item The Online Service presents the Application Provider with a means to add his application to the Online Service.
-       \item The Application Provider adds the application.
-	\item The Online Service initiates a number of automated tests on the application.
-	\item The application passes all tests.
-	\item The Online Service notifies the Application Provider that the application got accepted.
+       \item Step 1
+       \item Step 2
+       \item Step 3
        \item \ldots
     \end{enumerate}
 
     \item \textbf{Alternative scenarios:} 
     \begin{enumerate}
-        \item [5b.] The application did not pass all automated tests.
-	\begin{enumerate}
-		\item [5b1.] The Onlince Service instructs a System Administrator to perform a secondary review.
-		\item [5b2a.] The System administrator approves the application, resume at step 6.
-		\item [5b2b.] The System Administrator rejects the application. The Application provider is notified of this decision.
-	\end{enumerate}
+        \item [3b.] Alternative at step 3
     \end{enumerate}
     
     \item \textbf{Remarks:}
